--- a/public/style.css
+++ b/public/style.css
@@ -42,8 +42,6 @@ a:hover {
     align-items: center;
     justify-self: center;
     margin: 5% 40%;
-}
 
-.text {
-    text-shadow: .1rem;
+    color: #111;
 }
